tests/baselines/reference/asyncFunctionDeclaration12_es6.errors.txt
tests/cases/conformance/async/es6/functionDeclarations/asyncFunctionDeclaration12_es6.ts(1,24): error TS1359: Identifier expected. 'await' is a reserved word that cannot be used here.


==== tests/cases/conformance/async/es6/functionDeclarations/asyncFunctionDeclaration12_es6.ts (1 errors) ====
    var v = async function await(): Promise<void> { }
                           ~~~~~
!!! error TS1359: Identifier expected. 'await' is a reserved word that cannot be used here.